--- a/shared/helpCenter.html
+++ b/shared/helpCenter.html
@@ -990,7 +990,7 @@
 </head>
 <body>
     <div class="header">
-        <div class="title">BeeMazing Help Center 4</div>
+        <div class="title">BeeMazing Help Center 1</div>
     </div>
 
     <div class="container">
@@ -1066,64 +1066,70 @@
 
         
 document.getElementById("submitOfferBtn").addEventListener("click", function () {
-    const selectedTasks = [];
-document.querySelectorAll('input[name="taskCheckbox"]:checked').forEach(checkbox => {
-  const title = checkbox.value;
-  const input = document.querySelector(`input[name="points_${title}"]`);
-  const reward = input ? parseInt(input.value) || 0 : 0;
+  const selectedTasks = [];
+  document.querySelectorAll('input[name="taskCheckbox"]:checked').forEach(checkbox => {
+    const title = checkbox.value;
+    const input = document.querySelector(`input[name="points_${title}"]`);
+    const reward = input ? parseInt(input.value) || 0 : 0;
+    selectedTasks.push({ title, reward });
+  });
 
-  selectedTasks.push({ title, reward });
-});
+  if (selectedTasks.length === 0) {
+    alert("Please select at least one task.");
+    return;
+  }
 
-if (selectedTasks.length === 0) {
-  alert("Please select at least one task.");
-  return;
-}
-
-  const selectedHelpType = localStorage.getItem("helpType"); // e.g. "offer" or "need"
+  const selectedHelpType = localStorage.getItem("helpType"); // e.g. "offerHelp" or "needHelp"
   const durationSelect = document.getElementById("expireTime");
-const durationMinutes = parseInt(durationSelect.value); // like 60 for 1 hour
-
+  const durationMinutes = parseInt(durationSelect.value);
   const durationInMs = durationMinutes * 60 * 1000;
 
   const helpMode = document.querySelector('input[name="helpMode"]:checked')?.value;
-if (!helpMode) {
-  alert("Please select how you want to help/receive help.");
-  return;
-}
+  if (!helpMode) {
+    alert("Please select how you want to help/receive help.");
+    return;
+  }
 
-const offer = {
-  type: selectedHelpType,
-  helpMode,
-  tasks: selectedTasks,
-  createdAt: new Date().toISOString(),
-  expiresAt: new Date(Date.now() + durationInMs).toISOString(),
-  fromUser: localStorage.getItem("currentUserName") || "Anonymous"
-};
+  const taskTitles = selectedTasks.map(task => task.title).join(", ");
+  const description = `${selectedHelpType === "offerHelp" ? "Offering" : "Needing"} help with: ${taskTitles}`;
 
+  const offer = {
+    type: selectedHelpType,
+    helpMode,
+    tasks: selectedTasks,
+    description: description, // Add this line
+    createdAt: new Date().toISOString(),
+    expiresAt: new Date(Date.now() + durationInMs).toISOString(),
+    fromUser: localStorage.getItem("currentUserName") || "Anonymous"
+  };
 
   const adminEmail = localStorage.getItem("currentAdminEmail");
+  if (!adminEmail) {
+    alert("Error: Admin email not found. Please log in again.");
+    return;
+  }
 
   fetch("https://beemazing.onrender.com/api/help-offers", {
     method: "POST",
     headers: { "Content-Type": "application/json" },
     body: JSON.stringify({ adminEmail, offer })
   })
-  .then(async res => {
-  const data = await res.json();
-  console.log("Server response:", data); // 🔍 Add this
-  if (data.success) {
-    alert("Offer submitted!");
-  } else {
-    alert("Error saving offer: " + (data.message || "Unknown error")); // 🔍 Improve error visibility
-  }
-})
-
-  .catch(err => {
-    console.error("Error:", err);
-    alert("Failed to send offer");
-  });
+    .then(async res => {
+      const data = await res.json();
+      console.log("Server response:", data);
+      if (res.ok && data.success) {
+        alert("Offer submitted!");
+        document.getElementById("addOfferModal").classList.remove("show");
+      } else {
+        alert(`Error saving offer: ${data.error || "Unknown error"}`);
+      }
+    })
+    .catch(err => {
+      console.error("Error:", err);
+      alert("Failed to send offer: Network error");
+    });
 });
+
 
 
 
@@ -1171,36 +1177,40 @@ const offer = {
     
             const helpModeSection = document.getElementById("helpModeSection");
 
-proceedBtn.addEventListener("click", async () => {
-    const selectedType = document.querySelector('input[name="offerType"]:checked')?.value;
-    if (!selectedType) {
-        alert("Please select Offer Help or Need Help");
-        return;
-    }
 
-    proceedBtn.style.display = "none";
-    typeSelection.style.display = "none";
 
-    // 🌟 Show the help/replace options dynamically
-    let html = "<label><input type='radio' name='helpMode' value='help'> ";
-    html += (selectedType === "offerHelp") ? "You can Help</label>" : "You need Help</label>";
-    html += "<label><input type='radio' name='helpMode' value='replace'> ";
-    html += (selectedType === "offerHelp") ? "You can Replace</label>" : "You need a Replacement</label>";
-    helpModeSection.innerHTML = html;
-    helpModeSection.style.display = "block";
+            proceedBtn.addEventListener("click", async () => {
+  const selectedType = document.querySelector('input[name="offerType"]:checked')?.value;
+  if (!selectedType) {
+    alert("Please select Offer Help or Need Help");
+    return;
+  }
 
-    if (selectedType === "needHelp") {
-        taskSelection.innerHTML = "<p>Loading your tasks...</p>";
-        offerForm.style.display = "block";
-        await loadTodaysTasks(currentUser);
-    } else {
-        taskSelection.innerHTML = "<p>Loading available tasks to help with...</p>";
-        offerForm.style.display = "block";
-        await loadAllUncompletedTasks();
-    }
+  localStorage.setItem("helpType", selectedType); // Add this line
 
-    submitOfferBtn.style.display = "inline-block";
+  proceedBtn.style.display = "none";
+  typeSelection.style.display = "none";
+
+  let html = "<label><input type='radio' name='helpMode' value='help'> ";
+  html += (selectedType === "offerHelp") ? "You can Help</label>" : "You need Help</label>";
+  html += "<label><input type='radio' name='helpMode' value='replace'> ";
+  html += (selectedType === "offerHelp") ? "You can Replace</label>" : "You need a Replacement</label>";
+  helpModeSection.innerHTML = html;
+  helpModeSection.style.display = "block";
+
+  if (selectedType === "needHelp") {
+    taskSelection.innerHTML = "<p>Loading your tasks...</p>";
+    offerForm.style.display = "block";
+    await loadTodaysTasks(currentUser);
+  } else {
+    taskSelection.innerHTML = "<p>Loading available tasks to help with...</p>";
+    offerForm.style.display = "block";
+    await loadAllUncompletedTasks();
+  }
+
+  submitOfferBtn.style.display = "inline-block";
 });
+
 
 
 
